<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.yc.trip</groupId>
    <artifactId>yc-trip</artifactId>
    <packaging>pom</packaging>
    <version>1.0.0-SNAPSHOT</version>
    <modules>
        <module>trip-api-business</module>
        <module>trip-service-business</module>
        <module>trip-web-manage</module>
        <module>trip-web-mp</module>
    </modules>

    <properties>
        <framework.version>1.0.2-SNAPSHOT</framework.version>
    </properties>

    <!-- 设定主仓库，按设定顺序进行查找。 -->
    <repositories>
        <!-- 如有Nexus私服, 取消注释并指向正确的服务器地址. -->
        <repository>
            <id>releases</id>
            <name>Team Nexus Repository</name>
            <url>http://nexus.yun-chang.cn/nexus/content/groups/public/</url>
        </repository>
    </repositories>

    <!-- 设定插件仓库 -->
    <pluginRepositories>
        <pluginRepository>
            <id>oschina-repos</id>
            <name>Oschina Releases</name>
            <url>http://nexus.yun-chang.cn/nexus/content/groups/public</url>
        </pluginRepository>
    </pluginRepositories>

    <!-- maven 私库配置，需要先安装私库 -->
    <distributionManagement>
        <repository>
            <id>releases</id>
            <name>Gigold Nexus Repository</name>
            <url>http://nexus.yun-chang.cn/nexus/content/repositories/releases</url>
        </repository>
        <snapshotRepository>
            <id>snapshots</id>
            <name>Gigold Nexus Repository</name>
            <url>http://nexus.yun-chang.cn/nexus/content/repositories/snapshots</url>
        </snapshotRepository>
    </distributionManagement>

    <build>

        <resources>
            <resource>
                <directory>src/main/java</directory>
                <includes>
                    <include>**/*.properties</include>
                    <include>**/*.xml</include>
                </includes>
                <filtering>false</filtering>
            </resource>
            <resource>
                <directory>src/main/resources</directory>
            </resource>
        </resources>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.3</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>2.4</version>
                <configuration>
                    <attach>true</attach>
                </configuration>
                <executions>
                    <execution>
                        <phase>compile</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.3.1</version>
                <configuration>
                    <skip>true</skip>
                    <argLine>-Xmx512m -XX:PermSize=128m -XX:MaxPermSize=128m</argLine>
                    <testFailureIgnore>true</testFailureIgnore>
                    <includes>
                        <include>**/*Test*.java</include>
                    </includes>
                    <excludes/>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>